<?xml version="1.0"?>
<package format="2">
  <name>liv2pcl</name>
  <version>0.0.0</version>
  <description>ROS pacakge to convert livox_ros_drive/Custommsg to Pointcloud2 msg</description>
  <maintainer email="srirampr@umich.edu">sriram</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>livox_ros_driver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>livox_ros_driver</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>livox_ros_driver</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
